Finished materials feature, added 5 new actual materials (if you cant import the product you may have to do a shop transfer)

--- a/theunknowncollectivedevelopment-myshopify-com-t/assets/styles.css.liquid
+++ b/theunknowncollectivedevelopment-myshopify-com-t/assets/styles.css.liquid
@@ -1,3 +1,20 @@
+/*  Dylan our added css start   */
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*  Dylan our added css start   */
+
+
 /* http://meyerweb.com/eric/tools/css/reset/
 v2.0 | 20110126
 License: none (public domain)
